// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createChatJobs(options)(channel, segments) add attached file data and info 1`] = `
Array [
  Object {
    "assetTag": undefined,
    "fileData": "_FOO_",
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "attachment": Object {
            "type": "image",
          },
        },
        "recipient": Object {
          "id": "67890",
        },
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "assetTag": "BAR!",
    "fileData": "_BAR_",
    "fileInfo": Object {
      "contentType": "image/jpeg",
      "filename": "deathangel.jpg",
      "knownLength": 66666,
    },
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "attachment": Object {
            "type": "file",
          },
        },
        "recipient": Object {
          "id": "67890",
        },
      },
      "method": "POST",
      "relative_url": "bar/baz",
    },
  },
]
`;

exports[`createChatJobs(options)(channel, segments) respect options set in job value 1`] = `
Array [
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "bibiboo",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "astromech-droid",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "POST_PURCHASE_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "Oh! I apologize.",
        },
        "messaging_type": "UPDATE",
        "notification_type": "REGULAR",
        "persona_id": "protocol-droid",
        "recipient": Object {
          "id": "67890",
        },
        "tag": undefined,
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
]
`;

exports[`createChatJobs(options)(channel, segments) respect the empty tag if messaging_type has already been set 1`] = `
Array [
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "bibibooboobibooboo",
        },
        "messaging_type": "RESPONSE",
        "notification_type": "SILENT_PUSH",
        "persona_id": "astromech-droid",
        "recipient": Object {
          "id": "67890",
        },
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
]
`;

exports[`createChatJobs(options)(channel, segments) with message metadata 1`] = `
Array [
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "sender_action": "typing_on",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "id": 1,
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "id": 2,
        "recipient": Object {
          "id": "67890",
        },
      },
      "method": "POST",
      "relative_url": "bar/baz",
    },
  },
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "id:3",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "assetTag": undefined,
    "fileData": undefined,
    "fileInfo": undefined,
    "key": "fb.12345.67890",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "4",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "67890",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
]
`;
